Parcel to WebPack migration

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,10 @@
 <!--    <script src="libs/three.js"></script>-->
 <!--    <script src="libs/GLTFLoader.js"></script>-->
 
-    <script src="main.js"></script>
 <!--    <script  src="js_components/SplineCam.js"></script>-->
+
+
+<!--    <script src="index.js"></script>-->
 
 </body>
 </html>
